<resources>
    <string name="app_name">King Of Heroes</string>
    <string name="black_panther">Black Panther</string>
    <string name="dr_strange">Dr. Strange</string>
    <string name="black_widow">Black Widow</string>
    <string name="star_lord">Star Lord</string>
    <string name="thor">Thor</string>
    <string name="ant_man">Ant-Man</string>
    <string name="aquaman">Aquaman</string>
    <string name="batman">Batman</string>
    <string name="captain_america">Captain America</string>
    <string name="captain_marvel">Captain Marvel</string>
    <string name="deadpool">Deadpool</string>
    <string name="groot">Groot</string>
    <string name="hawkeye">Hawkeye</string>
    <string name="hulk">Hulk</string>
    <string name="iron_man">Iron Man</string>
    <string name="joker">Joker</string>
    <string name="rocket_raccoon">Rocket Raccoon</string>
    <string name="spider_man">Spider-Man</string>
    <string name="superman">Superman</string>
    <string name="wonder_woman">Wonder Woman</string>

    <string name="img_desc_card_fighter">Card of a fighter</string>
    <string name="img_desc_card_power">Card of a power</string>
    <string name="img_desc_board_game">Picture of the bord game</string>
    <string name="img_desc_background">Background of the screen</string>
    <string name="img_desc_Dice">Picture of the dice</string>
    <string name="you">\u0020(You)</string>

    <string name="zero_value">0</string>
    <string name="max_victory_points">%d / 20</string>
    <string name="max_life">%d / 10</string>
    <string name="dice_turn">%d roll remaining</string>
    <string name="dice_turns">%d rolls remaining</string>

    <string name="btn_throw">THROW</string>
    <string name="btn_validate">VALIDATE</string>
    <string name="btn_pass">PASS</string>
    <string name="btn_buy">BUY</string>

    <string name="stamina_logo">Stamina Logo</string>
    <string name="life_logo">Life logo</string>
    <string name="victory_logo">Victory logo</string>
    <string name="play">Play</string>
    <string name="content_description_home_image">Background of the application</string>
    <string name="rules">Rules</string>
    <string name="choose_your_hero">Choose your hero</string>
    <string name="choose">Choose</string>
    <string name="user_display_name_format">%s%s</string>

    <string name="win_string">You are the king of Heroes ! </string>
    <string name="lose_string">You lost ! </string>
    <string name="replay">Replay</string>
    <string name="character_selector_left_button">Character selector left button</string>
    <string name="character_selector_right_button">Character selector right button</string>
    <string name="background_image">Background image</string>
    <string name="rules_url">https://www.regledujeu.fr/king-of-tokyo/</string>
    <string name="image_of_the_winner">Image of the winner</string>
    <string name="shop_buy">Buy an attack?</string>
    <string name="leave_button">Leave</string>
    <string name="stay_button">Stay</string>
    <string name="alert_leave_city_text">Do you want to leave the city?</string>
</resources>