<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.select_fighter_screen.SelectFighterFragment">


    <TextView
        android:id="@+id/select_fighter_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/marvel"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_fighter_center_image_view" />

    <ImageView
        android:id="@+id/select_fighter_center_image_view"
        android:layout_width="280dp"
        android:layout_height="350dp"
        android:contentDescription="@string/img_desc_card_fighter"
        android:src="@drawable/ant_man"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/select_fighter_right_image_view"
        android:layout_width="280dp"
        android:layout_height="350dp"
        android:contentDescription="@string/img_desc_card_fighter"
        android:src="@drawable/aquaman"
        app:layout_constraintBottom_toBottomOf="@+id/select_fighter_center_image_view"
        app:layout_constraintStart_toEndOf="@+id/select_fighter_center_image_view"
        app:layout_constraintTop_toTopOf="@+id/select_fighter_center_image_view" />

    <ImageView
        android:id="@+id/select_fighter_left_image_view"
        android:layout_width="280dp"
        android:layout_height="350dp"
        android:contentDescription="@string/img_desc_card_fighter"
        android:src="@drawable/batman"
        app:layout_constraintBottom_toBottomOf="@id/select_fighter_center_image_view"
        app:layout_constraintEnd_toStartOf="@+id/select_fighter_center_image_view"
        app:layout_constraintTop_toTopOf="@+id/select_fighter_center_image_view" />

    <Button
        android:id="@+id/select_fighter_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/arrow_right"
        app:layout_constraintBottom_toBottomOf="@+id/select_fighter_name_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toEndOf="@+id/select_fighter_name_text_view"
        app:layout_constraintTop_toTopOf="@+id/select_fighter_name_text_view" />

    <Button
        android:id="@+id/select_fighter_previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/arrow_left"
        app:layout_constraintBottom_toBottomOf="@+id/select_fighter_name_text_view"
        app:layout_constraintEnd_toStartOf="@+id/select_fighter_name_text_view"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/select_fighter_name_text_view" />

    <Button
        android:id="@+id/select_fighter_choose_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_rounded"
        android:gravity="center|center_vertical"
        android:text="@string/choose"
        android:textColor="#FFB751"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/marvel"
        android:gravity="center"
        android:text="@string/choose_your_hero"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>